[+] estructura de footer con css

--- a/index.html
+++ b/index.html
@@ -61,7 +61,34 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">Lets Work together + form</div>
+      <div class="container footer-content">
+        <div class="info">
+          <div class="tituloeinformacion">
+            <strong class="titulo">Let’s work together</strong>
+          <p class="description">
+            This is a template Figma file, turned into code using Anima. Learn
+            more at AnimaApp.com This is a template Figma file, turned into code
+            using Anima. Learn more at AnimaApp.com
+          </p>
+          </div>
+          <div class="rs">
+            <a href=""><img src="./images/discord.svg" alt=""></a>
+            <a href=""><img src="./images/facebook.svg" alt=""></a>
+            <a href=""><img src="./images/dribbble.svg" alt=""></a>
+            <a href=""><img src="./images/instagram.svg" alt=""></a>
+            <a href=""><img src="./images/behance.svg" alt=""></a>
+            </div>
+        </div>
+        <div class="formulario">
+          <form action="" class="formulario">
+            <label><input type="name" placeholder="name"/></label><br />
+            <label><input type="email" placeholder="email"/></label><br />
+            <label><textarea name="textarea" rows="10" cols="27" placeholder="Type your message here"></textarea></label><br />
+            <input type="submit" value="Submit" />
+          </form>
+        </div>
+        
+      </div>
     </footer>
     <script src="./js/main.js"></script>
   </body>
