--- a/index.html
+++ b/index.html
@@ -57,37 +57,78 @@
         </div>
       </section>
       <section class="description">
-        <div class="container">La Historia</div>
+        <div class="container description-content">
+          <p class="parrafo1">
+            When I was 5, I got adbucted by a unicorn family. When they returned
+            me to earth, I joined a designer school. But, fo’ real, what I
+            learned with my kidnaptive family really gave an edge to my creative
+            language.
+          </p>
+          <p class="parrafo2">
+            Being a human is way too complicated. Time to be a unicorn.
+          </p>
+          <p class="parrafo3">
+            Try it and you’ll see. Then your Figma files are just gonna fly in color, glitter, interactions and autolayout.
+          </p>
+          <p class="parrafo4">
+            Also, grow a beard. Check my bio if that is not clear.
+          </p>
+          <p class="parrafo5">
+            Available for projects, from Monday to Tuesday, 
+            mainy between 14 and 16. (Unless there is a unicorn race on TV - DUH -in that case, come back another day).
+            Projects include, RocknRoll covers, furniture refurbishing, Unicorn potty training and more.
+          </p>
+        </div>
       </section>
     </main>
     <footer class="footer">
       <div class="container footer-content">
-        <div class="info">
-          <div class="tituloeinformacion">
-            <strong class="titulo">Let’s work together</strong>
-          <p class="description">
+        <div class="lets-work">
+          <h2>Let’s work together</h2>
+          <p>
             This is a template Figma file, turned into code using Anima. Learn
             more at AnimaApp.com This is a template Figma file, turned into code
             using Anima. Learn more at AnimaApp.com
           </p>
-          </div>
-          <div class="rs">
-            <a href=""><img src="./images/discord.svg" alt=""></a>
-            <a href=""><img src="./images/facebook.svg" alt=""></a>
-            <a href=""><img src="./images/dribbble.svg" alt=""></a>
-            <a href=""><img src="./images/instagram.svg" alt=""></a>
-            <a href=""><img src="./images/behance.svg" alt=""></a>
-            </div>
+          <ul class="social-media">
+            <li>
+              <a href="https://discord.com/" target="_blank"><img src="./images/discord.svg" alt="Discor Icon" /></a>
+            </li>
+            <li>
+              <a href="https://www.facebook.com/" target="_blank"><img src="./images/facebook.svg" alt="Facebook Icon" /></a>
+            </li>
+            <li>
+              <a href="https://dribbble.com/" target="_blank"><img src="./images/dribbble.svg" alt="Dribbble Icon" /></a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/" target="_blank"><img src="./images/instagram.svg" alt="instagram Icon" /></a>
+            </li>
+            <li>
+              <a href="https://www.behance.net/onboarding/adobe" target="_blank"><img src="./images/behance.svg" alt="Behance Icon" /></a>
+            </li>
+          </ul>
         </div>
-        <div class="formulario">
-          <form action="" class="formulario">
-            <label><input type="name" placeholder="name"/></label><br />
-            <label><input type="email" placeholder="email"/></label><br />
-            <label><textarea name="textarea" rows="10" cols="27" placeholder="Type your message here"></textarea></label><br />
-            <input type="submit" value="Submit" />
+        <div class="contact">
+          <form action="form-contact" class="">
+            <div class="field">
+              <input class="form-input" type="text" placeholder="Name" />
+            </div>
+            <div class="field">
+              <input class="form-input" type="email" placeholder="Email" />
+            </div>
+            <div class="field">
+              <textarea
+                class="form-input"
+                name=""
+                id=""
+                placeholder="Type your message here"
+              ></textarea>
+            </div>
+            <div class="field">
+              <button class="btn btn--bg-black">submit</button>
+            </div>
           </form>
         </div>
-        
       </div>
     </footer>
     <script src="./js/main.js"></script>
